file system reworks

--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -19,3 +19,9 @@
  FSM_companies_kohn_civilian:0 "Colonial Companies"
  FSM_companies_kohn_civilian_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
  FSM_maywerken:0 "Maywerken" 
+ FSM_veto_native_rights_bill:1 "Veto Landowners' Suffarage Amendment"
+ FSM_veto_native_rights_bill_desc:1 "The law ensures that the people in charge of the economic policies are the ones making the money"
+ FSM_pass_native_rights_bill:1 "Pass Landowners' Suffarage Amendment"
+ FSM_pass_native_rights_bill_desc:1 "The constituiton of the FSM dictates that only landowners are allowed suffarage, confining the range of voters to the upper class. An amendment to relax these laws and allow more people to vote has a been up in the air in the government for a long time. Passing this would give common citizens more rights and would let newer ideas help develop the nation."
+ FSM_supress_manu_nationalism:1 "Oust Opposition in Manu"
+ FSM_supress_manu_nationalism_desc:1 "Many of the representatives in the Manu Autonomous State have proven uncooperative. We should use our powers to remove these figures from the government, and replace them with less radical representatives."
