--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -14,31 +14,247 @@
  MUU_MOO_neutrality:0 "Myuqujjuq Muror"
  MUU_MOO_neutrality_DEF:0 "Myuqujjuq Muror"
  
+ MUU_national_tragedy:1 "A National Tragedy!"
+ MUU_national_tragedy_desc:1 "The symbol of Mu's prosperity has turned to our harm! When the dam was finished it began to flood the province of Mauruuru in Geq damaging homesand property. When our engineers tried to drop the water level too fast it ended up overwhelming the safety systems we had installed and the dam ruptured. The ensuing wall of water killed tens of thousands in Neji and destroyed many industrial centers."
+ MUU_emergency_meeting:1 "Emergency Meeting"
+ MUU_emergency_meeting_desc:1 "To mitigate the worst of this disaster we must call an emergency meeting of all government officials. This will help us to plan an adequate response, and hopefully will show the public that we are in control of the situation."
+ MUU_government_purges:1 "Government Purges"
+ MUU_government_purges_desc:1 "The public is rightfully upset by the horrendous death toll from the dam's failure. We must show that we are responding to the situation in order to keep the public's anger at bay."
+ MUU_upper_reform:1 "Upper Chamber Reforms"
+ MUU_upper_reform_desc:1 "Our emergency meeting has shown us that we must begin the arduous process of restructuring our government to be more responsive to situations like this and to prevent any disasters in the future."
+ MUU_lower_reform:1 "Lower Chamber Reforms"
+ MUU_lower_reform_desc:1 "'The reforms have been difficult so far but have begun to bear fruit. We know that further change is necessary and we believe that it will serve us and our nation well. Where we go from here will depend on the will of the people."
+ MUU_emergency_reform:1 "Emergency Reforms"
+ MUU_emergency_reform_desc:1 "'We cannot wait for methodical change in government; we must act now! By pushing through emergency reforms we can demonstrate to the public that we are serious about protecting them.' - Lladut Hushharem of House Gusqurat"
+ MUU_scapegoats:1 "Scapegoats"
+ MUU_scapegoats_desc:1 "'A few well placed scapegoats, publicly tried and convicted of gross negligence, will sate the wrath of the people.' - Udizopa Dahamaz of House Qangazda"
+ MUU_gov_pogrom:1 "Government Pogrom"
+ MUU_gov_pogrom_desc:1 "'The fury of the people will consume us! If we are unable to provide a sufficient number of people to blame for this tragedy it will lead to civil unrest.' - Nyazuq Visja of House Rujjidu"
+ MUU_mil_pogrom:1 "Military Pogrom"
+ MUU_mil_pogrom_desc:1 "'The military played a significant role in the construction of the ill-fated dam, so they too should share some of the blame!' - Uqun Bostru of House Gahrijjeom"
+ MUU_nationalize_1:1 "Nationalize Railroads"
+ MUU_nationalize_1_desc:1 "'The situation is not all bad. Firing a number of troublemakers in government and a handful of overly self-righteous military men can leave the nation in a much better position. Another option is to shift some of the blame onto the privately owned companies that were hired for the construction of the dam. We can seize their assets as 'payment' for their part in this tragedy.' Gazuq Herimsa of House Llanstiq"
+ MUU_nationalize_2:1 "Nationalize Factories"
+ MUU_nationalize_2_desc:1 "Each factory that provided, or is suspected to have provided, faulty material for the construction of Qibeha Dam is hereby seized by the government as payment for their part in the national tragedy that ensued. -Qibeha Dam Recovery Bill, section 1, paragraph 3. "
+ MUU_nationalize_conscription:1 "Extend Conscription"
+ MUU_nationalize_conscription_desc:1 "Some of the seizures of property from private interests has caused increased unrest among part of the populace. We must strengthen our renewed military with recruits."
+ MUU_impeach_ollun:1 "Impeach Ollun"
+ MUU_impeach_ollun_desc:1 "'The Upper and Lower Chambers have spoken. He brought this terrible ruin on our nation through his folly! Ollun must go!' - Aztaj Darjetaq of House Oqzur "
+ MUU_old_system:1 "The Old System"
+ MUU_old_system_desc:1 "'Ujjamun Nalangqu, our thrice blessed leader, has celebrated his 70th turn around Hu. He was pressured by House Gahrijjeom to bring in ideas from the vaunted Western Powers. While some have benefitted us much of the rest has been harmful or wasteful. Perhaps if he had more control again in the ruling of our great nation he could fix some of these problems.' - Dashutun Gusallu of House Vedzagra"
+ MUU_power_ojjamun:1 "Power to the Ujjamun"
+ MUU_power_ojjamun_desc:1 "'The people have spoken and we agree with them. We must return to the days of glory when the Ujjamun ruled from the Qiedil Throne!' - Nurq Tapanggu of House Owastim "
+ MUU_purge_fascists:0 "Fascism Purged"
+ MUU_purge_fascists_desc:1 "'These so called fascists merely give lip-service to the Ujjamun. They do not truly look for the good of the nation - they wish to enrich themselves at the expense of the people.' Durut Anumullu of House "
+ MUU_dismantle_militias:1 "Dismantle Fascist Militias"
+ MUU_dismantle_militias_desc:1 ""
+ MUU_civic_education:1 "Civic Education"
+ MUU_civic_education_desc:1 ""
+ MUU_general_education:1 "The Home of Knowledge"
+ MUU_general_education_desc:1 ""
+ MUU_defense_ministry:1 "Expand the Defense Ministry"
+ MUU_defense_ministry_desc:1 ""
+ MUU_persecute_democratic:1 "Persecute Democratic Politicians"
+ MUU_persecute_democratic_desc:1 ""
+ MUU_new_elite:1 "A New Elite"
+ MUU_new_elite_desc:1 ""
+ MUU_national_holidays:1 "Celebrating National Holidays"
+ MUU_national_holidays_desc:1 "'Our people toil gloriously but endlessly; why should they not celebrate the holy days? Did the gods not command us to observe those sacred days? We we not given days for merriment and enjoyment? The Muror are a blessed people and we should celebrate this!' - Anaderuq Hullamru of House Jashunat"
+ MUU_one_people:1 "One Muror People"
+ MUU_one_people_desc:1 "'The Muror are one people. The years of division and dissention must be brought to an end! We are one people! No other nation, no other people, are as glorious or as blessed as we Muror! We must bring back the rebellious groups now!' - Unturq Dhizhmit of House Navgollu"
+ MUU_development_ministry:1 "Create the Ministry of Development"
+ MUU_development_ministry_desc:1 ""
+ MUU_nonaligned_mil1:1 "A Loyal Army"
+ MUU_nonaligned_mil1_desc:1 "Our Army has become the model for our neighbors, and their loyalty is unmatched."
+ MUU_nonaligned_mil2:1 "The People's Unbreakable Spirit"
+ MUU_nonaligned_mil2_desc:1 "Millenia of continued aggression from foreigner invaders forged an unyielding and resilient people. Every man shall fight to the bitter end and the civilians are expected to turn our enemy's stay in the Muror lands a living nightmare!"
+ MUU_nonaligned_milciv1:1 "Expand the Military Industries"
+ MUU_nonaligned_milciv1_desc:1 ""
+ MUU_nonaligned_milciv2:1 "The Empire's Dockyards"
+ MUU_nonaligned_milciv2_desc:1 ""
+ MUU_nonaligned_civ1:1 "Heavy Machinery and Industries"
+ MUU_nonaligned_civ1_desc:1 ""
+ MUU_nonaligned_civ2:1 "The Dustartajare Industrial Complex"
+ MUU_nonaligned_civ2_desc:1 "Our geologists found an endless deposit of coal and bauxite in Dustartajare. It is expected to be enough to kickstart the construction of coal power plants that will supply the massive energy requirements of aluminum refineries."
+ MUU_nonaligned_final:1 "A Beacon of Light"
+ MUU_nonaligned_final_desc:1 "'The gods have given us this bountiful land. They have provided us with our beautiful language. They have made us a beautiful people. Why then should we look to others when others should look to us? Ours is the glorious future! We shall be a beacon of light to the world!' - Vashutzaq Nalleshut of House Thallazhhem"
+ MUU_westernization:1 "Westernization"
+ MUU_westernization_desc:1 ""
+ MUU_voice_public:1 "Voice of the People"
+ MUU_voice_public_desc:1 ""
+ MUU_join_allies:1 "Taking a Stance"
+ MUU_join_allies_desc:1 ""
+ MUU_acquire_weapons:1 "Acquire Modern Weapons"
+ MUU_acquire_weapons_desc:1 ""
+ MUU_acquire_ships:1 "Buy Old Ships"
+ MUU_acquire_ships_desc:1 ""
+ MUU_invite_companies:1 "Invite Foreign Companies"
+ MUU_invite_companies_desc:1 ""
+ MUU_extend_voting:1 "Extend Voting Rights"
+ MUU_extend_voting_desc:1 ""
+ MUU_transport_infrastructure:1 "Expand the Transport Infrastructure"
+ MUU_transport_infrastructure_desc:1 ""
+ MUU_modernize_industry:1 "Modernize our Industry"
+ MUU_modernize_industry_desc:1 ""
+ MUU_expand_ports:1 "Expand the Ports"
+ MUU_expand_ports_desc:1 ""
+ MUU_expand_dockyards:1 "The Q'tir Dockyards"
+ MUU_expand_dockyards_desc:1 ""
+ MUU_economic_reforms:1 "Economic Reforms"
+ MUU_economic_reforms_desc:1 ""
+ MUU_rural_workforce:1 "Extend Conscription in the Countryside"
+ MUU_rural_workforce_desc:1 ""
+ MUU_soviet_aid:1 "Soviet Aid"
+ MUU_soviet_aid_desc:1 ""
+ MUU_fellow_socialists:1 "Our Fellow Socialists"
+ MUU_fellow_socialists_desc:1 ""
+ MUU_support_revolutions:1 "Help the Class Struggle Abroad"
+ MUU_support_revolutions_desc:1 ""
+ MUU_puppet_republics:1 "Guide the Weaker States"
+ MUU_puppet_republics_desc:1 ""
+ MUU_join_comintern:1 "Join the Comintern!"
+ MUU_join_comintern_desc:1 ""
+ MUU_expropriate_bourgeoisie:1 "Expropriate Bourgeoise Property"
+ MUU_expropriate_bourgeoisie_desc:1 ""
+ MUU_forced_collectivization:1 "Forced Collectivization"
+ MUU_forced_collectivization_desc:1 ""
+ MUU_develop_poor:1 "Develop the Poor Districts"
+ MUU_develop_poor_desc:1 ""
+ MUU_land_reclamation:1 "Drain the Marshes"
+ MUU_land_reclamation_desc:1 ""
+ MUU_reform_religion:1 "Reform the Old Religion"
+ MUU_reform_religion_desc:1 ""
+ MUU_persecute_religion:1 "No Room for Superstition"
+ MUU_persecute_religion_desc:1 ""
+ MUU_state_first:1 "State Above All"
+ MUU_state_first_desc:1 ""
+ MUU_fascist_conscription:1 "Compulsory Military Service"
+ MUU_fascist_conscription_desc:1 ""
+ MUU_expropriate_foreigners:1 "Expropriate Foreign Property"
+ MUU_expropriate_foreigners_desc:1 ""
+ MUU_convert_factories1:1 "Militarize the Economy"
+ MUU_convert_factories1_desc:1 ""
+ MUU_convert_factories2:1 "Convert Factories for the War"
+ MUU_convert_factories2_desc:1 ""
+ MUU_claim_muror:1 "The Rebel States"
+ MUU_claim_muror_desc:1 ""
+ MUU_conscript_muror:1 "Incorporate the Locals into the Army"
+ MUU_conscript_muror_desc:1 ""
+ MUU_declare_empire:1 "A Unified People"
+ MUU_declare_empire_desc:1 ""
+ MUU_claim_neighbours:1 "Strike the Invaders!"
+ MUU_claim_neighbours_desc:1 ""
+ MUU_existential_war:1 "An Existential War"
+ MUU_existential_war_desc:1 ""
+ MUU_claim_continent:1 "Cleanse the Homeland"
+ MUU_claim_continent_desc:1 ""
+ MUU_unified_empire:1 "The Great Empire of Mu"
+ MUU_unified_empire_desc:1 ""
+ 
+ MUU_connect_countryside:1 "Connect with the Countryside"
+ MUU_connect_countryside_desc:1 ""
+ MUU_rural_infrastructure:1 "Hadu-Omarka Railroad"
+ MUU_rural_infrastructure_desc:1 ""
+ MUU_rural_manpower:1 ">>>>>Extend Military Recruitment"
+ MUU_rural_manpower_desc:1 ""
+ MUU_no_talk:1 "No Talk with Communists"
+ MUU_no_talk_desc:1 ""
+ MUU_yes_talk:1 "Compromise with the Militias"
+ MUU_yes_talk_desc:1 ""
+ MUU_exterminate_communists:1 "Exterminate the Reds!"
+ MUU_exterminate_communists_desc:1 ""
+ MUU_suppress_communists:1 "Suppress the Militias"
+ MUU_suppress_communists_desc:1 ""
+ MUU_incorporate_communists:1 "Incorporate and Support Moderates"
+ MUU_incorporate_communists_desc:1 ""
+ MUU_embrace_communists:1 "Support the Revolution!"
+ MUU_embrace_communists_desc:1 ""
+ MUU_survey_militias:1 "Survey the Hot Spots"
+ MUU_survey_militias_desc:1 ""
+ MUU_strike_cells:1 "Strike the Communist Cells"
+ MUU_strike_cells_desc:1 ""
+ MUU_destroy_militia:1 "Destroy the Militias"
+ MUU_destroy_militia_desc:1 ""
+ MUU_limit_influence:1 "Limit their Influence"
+ MUU_limit_influence_desc:1 ""
+ MUU_bribe_politicians:1 "Bribe the Politicians"
+ MUU_bribe_politicians_desc:1 ""
+ MUU_deradicalize_youth:1 "Deradicalize the Youth"
+ MUU_deradicalize_youth_desc:1 ""
+ MUU_absorb_militias:1 "Absorb the Militias"
+ MUU_absorb_militias_desc:1 ""
+ MUU_expand_influence:1 "Expand the Influence"
+ MUU_expand_influence_desc:1 ""
+ MUU_control_cities:1 "Establish Presence on the Old Cities"
+ MUU_control_cities_desc:1 ""
+ MUU_rural_schools:1 "Rural Schools"
+ MUU_rural_schools_desc:1 ""
+ MUU_military_reforms:1 "Military Reforms"
+ MUU_military_reforms_desc:1 ""
+ MUU_infantry_equip:1 "Modernized Rifles"
+ MUU_infantry_equip_desc:1 ""
+ MUU_artillery_equip:1 "Fire Support"
+ MUU_artillery_equip_desc:1 ""
+ MUU_doctrine_research1:1 "Adaptive Tactics"
+ MUU_doctrine_research1_desc:1 ""
+ MUU_motorized_equip:1 "Mobile Warfare"
+ MUU_motorized_equip_desc:1 ""
+ MUU_tank_equip:1 "Heavy Armor"
+ MUU_tank_equip_desc:1 ""
+ MUU_special_forces:1 "Namumaz Qul"
+ MUU_special_forces_desc:1 ""
+ MUU_infantry_marsh:1 "Detachable Floaters"
+ MUU_infantry_marsh_desc:1 ""
+ MUU_motorized_marsh:1 "Watertight Seals"
+ MUU_motorized_marsh_desc:1 ""
+ MUU_tank_marsh:1 "River Fording"
+ MUU_tank_marsh_desc:1 ""
+ MUU_dd_focus:1 "Protect the Trade"
+ MUU_dd_focus_desc:1 ""
+ MUU_cl_focus:1 "Coastal Guard"
+ MUU_cl_focus_desc:1 ""
+ MUU_sub_focus:1 "Sink the Invaders"
+ MUU_sub_focus_desc:1 ""
+ MUU_ca_focus:1 "Heavy Ships"
+ MUU_ca_focus_desc:1 ""
+ MUU_bb_focus:1 "The Pride of the Fleet"
+ MUU_bb_focus_desc:1 ""
+ MUU_cv_focus:1 "Floating Airfields"
+ MUU_cv_focus_desc:1 ""
+ MUU_light_fighter:1 "Homeland Defense"
+ MUU_light_fighter_desc:1 ""
+ MUU_cas:1 "Ground Pounding"
+ MUU_cas_desc:1 ""
+ MUU_nav_bomber:1 "Defense of Hadu"
+ MUU_nav_bomber_desc:1 ""
+ MUU_heavy_fighter:1 "Escort Fighters"
+ MUU_heavy_fighter_desc:1 ""
+ MUU_tac_bomber:1 "Long-Range Support"
+ MUU_tac_bomber_desc:1 ""
+ MUU_strat_bomber:1 "Aparuqur Ijuaz"
+ MUU_strat_bomber_desc:1 ""
+ MUU_experimental_airfield:1 "The Inirliq Research Airbase"
+ MUU_experimental_airfield_desc:1 ""
+ MUU_expand_airfield:1 "Expand the Operations"
+ MUU_expand_airfield_desc:1 ""
+ MUU_jet_research:1 "Jet Propulsion Research"
+ MUU_jet_research_desc:1 ""
  
  
  MUU_rural_isolation:0 "Rural Population Isolated"
  MUU_rural_guerrillas:0 "Rural Communist Guerrillas"
  MUU_government_purges_happening:0 "Government Purges Happening"
  MUU_extended_conscription:0 "Extended Conscription"
- MUU_purge_fascists:0 "Fascism Purged"
  MUU_civic_education_idea:0 "Civic Education"
  MUU_ministry_of_defense:0 "Ministry of Defense"
  MUU_ministry_of_development:0 "Ministry of Development"
  MUU_persecuting_democrats:0 "Persecuting Democrats"
- MUU_national_holidays:0 "Celebrating National Holidays"
  MUU_mil_1:0 "A Loyal Army"
  MUU_mil_2:0 "Unbreakable Spirit"
  MUU_restored_empire:0 "Restored Empire"
- MUU_westernization:0 "Westernization"
  MUU_extend_voting_rights:0 "Extended Voting Rights"
- MUU_economic_reforms:0 "Economic Reforms"
  MUU_volunteers:0 "Help the Class Struggle Abroad"
- MUU_develop_poor:0 "Develop the Poor Regions"
- MUU_land_reclamation:0 "Land Reclamation Projects"
- MUU_reform_religion:0 "Reforming Religion"
- MUU_persecute_religion:0 "Persecuting the Religious Leaders"
  MUU_state_above_all:0 "State Above All"
- MUU_fascist_conscription:0 "Forced Conscription"
  MUU_fascist_mobilization:0 "Mobilization of the Economy"
  MUU_existential_war:0 "An Existential War"
  MUU_exterminate_commies:0 "Exterminating the Communists"
