--- a/localisation/GEQ_l_english.yml
+++ b/localisation/GEQ_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english: 
  GEQ_scientific_backlog:0 "Scientific Backlog"
  GEQ_scientific_backlog_desc:0 "We have an issue with a proper science base to help advance our technologies."
- GEQ_murorian_supremacy:0 "Geqian Supremacy"
+ GEQ_murorian_supremacy:0 "Duqegmu Supremacy"
  GEQ_murorian_supremacy_desc:0 "The Muror people of Geq consider themselves the 'masterrace' and are against immigration. This enflames a sense of duty to serve for nation."
  GEQ_murorian2_supremacy:0 "Murorian Sepremacy"
  GEQ_murorian2_supremacy_desc:0 "The Muror people of Geq consider themselves the 'masterrace' and are against immigration. This enflames a sense of duty to serve for nation."
@@ -21,13 +21,13 @@
  GEQ_newly_formed_state_desc:0 "We are a newly formed state, and we need to address our internal issues before looking outward."
  GEQ_prepare_to_retake_the_southe:0 "Prepare to Retake The South"
  GEQ_prepare_to_retake_the_southe_desc:0 "We must ready our armies for an invasion of our southern lands!"
- GEQ_embrace_geqian_militarism:0 "Embrace Geqian Militarism"
+ GEQ_embrace_geqian_militarism:0 "Embrace Duqegmu Militarism"
  GEQ_embrace_geqian_militarism_desc:0 ""
  GEQ_support_the_nuclear_family:0 "Support the Middle Class"
  GEQ_support_the_nuclear_family_desc:0 "We are investing subsidies in the middle class, which is allowing more people to have more children."
  GEQ_ditch_science:0 "Ditch Science"
  GEQ_ditch_science_desc:0 "We have decided to not support any sort of sciences, instead we support industrial development."
- GEQ_geq_bonus:0 "Geqian Army Standards"
- GEQ_geq_bonus_desc:0 "The Geqian people live in an enviorment with many different terrains, this has allowed them to endure in the toughest of situations."
+ GEQ_geq_bonus:0 "Duqegmu Army Standards"
+ GEQ_geq_bonus_desc:0 "The Duqegmu people live in an enviorment with many different terrains, this has allowed them to endure in the toughest of situations."
  GEQ_jap_bonus:0 "Japanese Naval Aid"
  GEQ_jap_bonus_desc:0 "We have gotten Japanese naval production, and development aid."
