updates to Mu's focus

--- a/localisation/GEQ_l_english.yml
+++ b/localisation/GEQ_l_english.yml
@@ -3,12 +3,12 @@
  GEQ_scientific_backlog_desc:0 "We have an issue with a proper science base to help advance our technologies."
  GEQ_murorian_supremacy:0 "Duqegmu Supremacy"
  GEQ_murorian_supremacy_desc:0 "The Muror people of Geq consider themselves the 'masterrace' and are against immigration. This enflames a sense of duty to serve for nation."
- GEQ_murorian2_supremacy:0 "Murorian Sepremacy"
+ GEQ_murorian2_supremacy:0 "Muror Sepremacy"
  GEQ_murorian2_supremacy_desc:0 "The Muror people of Geq consider themselves the 'masterrace' and are against immigration. This enflames a sense of duty to serve for nation."
- GEQ_resurrect_the_empire_of_mug:0 "Muroran Monarchist Support"
+ GEQ_resurrect_the_empire_of_mug:0 "Muror Monarchist Support"
  GEQ_resurrect_the_empire_of_mug_desc:0 "We are supporting a monarchy, to lead the new Empire of Mu."
  GEQ_support_muror_unification_groups_across_mu:0 "Muror Influences"
- GEQ_support_muror_unification_groups_across_mu_desc:0 "Former Geq, the Empire of Mu is influencing our politics, by supporting political parties that would wish to unify with them, and support of a monarchy."
+ GEQ_support_muror_unification_groups_across_mu_desc:0 "Formerly Geq, the Empire of Mu is influencing our politics, by supporting political parties that would wish to unify with them, and support of a monarchy."
  GEQ_invest_in_recruitment_tactics:0 "Invest in Recruiting Tactics"
  GEQ_invest_in_recruitment_tactics_desc:0 "We are investing in recruiting new soldiers, that are envigorated to fight for nation!"
  GEQ_invest_in_espionage:0 "Invest in Espionage"
