--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -23,7 +23,7 @@
  MUU_upper_reform:1 "Upper Chamber Reforms"
  MUU_upper_reform_desc:1 "Our emergency meeting has shown us that we must begin the arduous process of restructuring our government to be more responsive to situations like this and to prevent any disasters in the future."
  MUU_lower_reform:1 "Lower Chamber Reforms"
- MUU_lower_reform_desc:1 "'The reforms have been difficult so far but have begun to bear fruit. We know that further change is necessary and we believe that it will serve us and our nation well. Where we go from here will depend on the will of the people."
+ MUU_lower_reform_desc:1 "The reforms have been difficult so far but have begun to bear fruit. We know that further change is necessary and we believe that it will serve us and our nation well. Where we go from here will depend on the will of the people."
  MUU_emergency_reform:1 "Emergency Reforms"
  MUU_emergency_reform_desc:1 "'We cannot wait for methodical change in government; we must act now! By pushing through emergency reforms we can demonstrate to the public that we are serious about protecting them.' - Lladut Hushharem of House Gusqurat"
  MUU_scapegoats:1 "Scapegoats"
@@ -45,25 +45,25 @@
  MUU_power_ojjamun:1 "Power to the Ujjamun"
  MUU_power_ojjamun_desc:1 "'The people have spoken and we agree with them. We must return to the days of glory when the Ujjamun ruled from the Qiedil Throne!' - Nurq Tapanggu of House Owastim "
  MUU_purge_fascists:0 "Fascism Purged"
- MUU_purge_fascists_desc:1 "'These so called fascists merely give lip-service to the Ujjamun. They do not truly look for the good of the nation - they wish to enrich themselves at the expense of the people.' Durut Anumullu of House "
+ MUU_purge_fascists_desc:1 "'These so called fascists merely give lip-service to the Ujjamun. They do not truly look for the good of the nation - they wish to enrich themselves at the expense of the people.' Durut Anumullu of House Unutug"
  MUU_dismantle_militias:1 "Dismantle Fascist Militias"
- MUU_dismantle_militias_desc:1 ""
+ MUU_dismantle_militias_desc:1 "'We must disarm and break the spirit of these protection societies that the fascists have set up. All know that they are partisan units just waiting to overthrow the rightful Ujjamun.' Mullamang Liqudat of House Nusmugudru"
  MUU_civic_education:1 "Civic Education"
- MUU_civic_education_desc:1 ""
+ MUU_civic_education_desc:1 "'Not imprisonment but reeducation. How can we expect our country to thrive if we don't make use of all of the people under the Ujjamun's glorious rule?' - Lladut Hushharem of House Gusqurat"
  MUU_general_education:1 "The Home of Knowledge"
- MUU_general_education_desc:1 ""
+ MUU_general_education_desc:1 "'The world knows that Mu has been the home of knowledge for all time. We must reaffirm this and prove to the world, and again to our people, that Mu will lead the world in discovery and wonder!' - Opuqullat Vudzarnur of House Rujjidu"
  MUU_defense_ministry:1 "Expand the Defense Ministry"
- MUU_defense_ministry_desc:1 ""
+ MUU_defense_ministry_desc:1 "'The Ujjamun has decreed that we must prepare our nation's defenses. If we spend more money and time on our military this will surely help fulfill the Ujjamun's wishes.' - Deqrugut Eqashamu of House Tudusuqer"
  MUU_persecute_democratic:1 "Persecute Democratic Politicians"
- MUU_persecute_democratic_desc:1 ""
+ MUU_persecute_democratic_desc:1 "'These buffons claim to represent the people? How can they possibly claim any righteousness or piety? The Ujjamun is appointed by the gods to speak for the people! - Hudujjam Azbutim of House Dimadamaq"
  MUU_new_elite:1 "A New Elite"
- MUU_new_elite_desc:1 ""
+ MUU_new_elite_desc:1 "'Our previous lords were in good graces with the Ujjamun, and for very good reason - they counseled him in wisdom. We must once again elevate the scions of the Great Houses and the Lords to assist and support the Ujjamun.' - Suqurad Hagumarda of House Juderit"
  MUU_national_holidays:1 "Celebrating National Holidays"
  MUU_national_holidays_desc:1 "'Our people toil gloriously but endlessly; why should they not celebrate the holy days? Did the gods not command us to observe those sacred days? We we not given days for merriment and enjoyment? The Muror are a blessed people and we should celebrate this!' - Anaderuq Hullamru of House Jashunat"
  MUU_one_people:1 "One Muror People"
  MUU_one_people_desc:1 "'The Muror are one people. The years of division and dissention must be brought to an end! We are one people! No other nation, no other people, are as glorious or as blessed as we Muror! We must bring back the rebellious groups now!' - Unturq Dhizhmit of House Navgollu"
  MUU_development_ministry:1 "Create the Ministry of Development"
- MUU_development_ministry_desc:1 ""
+ MUU_development_ministry_desc:1 "'If we are to truly be a united people we must bring all of the glories of the modern world to each corner of the nation.' - Nurq Tapanggu of House Owastim"
  MUU_nonaligned_mil1:1 "A Loyal Army"
  MUU_nonaligned_mil1_desc:1 "Our Army has become the model for our neighbors, and their loyalty is unmatched."
  MUU_nonaligned_mil2:1 "The People's Unbreakable Spirit"
