--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -69,9 +69,9 @@
  MUU_nonaligned_mil2:1 "The People's Unbreakable Spirit"
  MUU_nonaligned_mil2_desc:1 "Millenia of continued aggression from foreigner invaders forged an unyielding and resilient people. Every man shall fight to the bitter end and the civilians are expected to turn our enemy's stay in the Muror lands a living nightmare!"
  MUU_nonaligned_milciv1:1 "Expand the Military Industries"
- MUU_nonaligned_milciv1_desc:1 ""
+ MUU_nonaligned_milciv1_desc:1 "If we are to properly equip our military we must ensure that our industry is up to the task."
  MUU_nonaligned_milciv2:1 "The Empire's Dockyards"
- MUU_nonaligned_milciv2_desc:1 ""
+ MUU_nonaligned_milciv2_desc:1 "For now we fully control the Sea of Hadu, soon we shall control the Austral Ocean, and eventually the Pacific Ocean. The Muror must be able to defend our land, especially once we have reclaimed it."
  MUU_nonaligned_civ1:1 "Heavy Machinery and Industries"
  MUU_nonaligned_civ1_desc:1 ""
  MUU_nonaligned_civ2:1 "The Dustartajare Industrial Complex"
