--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -73,33 +73,33 @@
  MUU_nonaligned_milciv2:1 "The Empire's Dockyards"
  MUU_nonaligned_milciv2_desc:1 "For now we fully control the Sea of Hadu, soon we shall control the Austral Ocean, and eventually the Pacific Ocean. The Muror must be able to defend our land, especially once we have reclaimed it."
  MUU_nonaligned_civ1:1 "Heavy Machinery and Industries"
- MUU_nonaligned_civ1_desc:1 ""
+ MUU_nonaligned_civ1_desc:1 "'Increase our industrial capacity! That will bring glory to Mu!' - Ujjamun Nalangqu"
  MUU_nonaligned_civ2:1 "The Dustartajare Industrial Complex"
  MUU_nonaligned_civ2_desc:1 "Our geologists found an endless deposit of coal and bauxite in Dustartajare. It is expected to be enough to kickstart the construction of coal power plants that will supply the massive energy requirements of aluminum refineries."
  MUU_nonaligned_final:1 "A Beacon of Light"
  MUU_nonaligned_final_desc:1 "'The gods have given us this bountiful land. They have provided us with our beautiful language. They have made us a beautiful people. Why then should we look to others when others should look to us? Ours is the glorious future! We shall be a beacon of light to the world!' - Vashutzaq Nalleshut of House Thallazhhem"
  MUU_westernization:1 "Westernization"
- MUU_westernization_desc:1 ""
+ MUU_westernization_desc:1 "Careful study of the governments of the Western Nations may give us ideas that will serve our nation throughout the coming years."
  MUU_voice_public:1 "Voice of the People"
- MUU_voice_public_desc:1 ""
+ MUU_voice_public_desc:1 "'Our glorious nation should be at the forefront of good governance, and that means the people must have a voice!' - Venamsu Wedemi"
  MUU_join_allies:1 "Taking a Stance"
- MUU_join_allies_desc:1 ""
+ MUU_join_allies_desc:1 "'If we are truly the beacon of virtue in this world, how can we not oppose evil in its many forms? We must join with likeminded and well meaning nations to protect and defend the rights of all people.' - Lashitavam Voqis"
  MUU_acquire_weapons:1 "Acquire Modern Weapons"
- MUU_acquire_weapons_desc:1 ""
+ MUU_acquire_weapons_desc:1 "As we did before, so should we do again. We must bring in modern armaments from willing nations to give us the fighting capabilities we will need."
  MUU_acquire_ships:1 "Buy Old Ships"
- MUU_acquire_ships_desc:1 ""
+ MUU_acquire_ships_desc:1 "We must expand our naval transport capabilities if we are to take our place as a true defender of democracy. Perhaps the Americans would be willing to part with some transports..."
  MUU_invite_companies:1 "Invite Foreign Companies"
- MUU_invite_companies_desc:1 ""
+ MUU_invite_companies_desc:1 "Our years of closed borders and rejection of foreign ideals have left us weaker. By bringing in foreign investment we can jumpstart our economy."
  MUU_extend_voting:1 "Extend Voting Rights"
- MUU_extend_voting_desc:1 ""
+ MUU_extend_voting_desc:1 "'It is a sad truth that I speak today. We have denied the Muli the right to representation for too long. We must show that we are better than this.' Tuygrum Hipollam"
  MUU_transport_infrastructure:1 "Expand the Transport Infrastructure"
- MUU_transport_infrastructure_desc:1 ""
+ MUU_transport_infrastructure_desc:1 "For industry to thrive and bring prosperity it must have the raw materials required. Without proper transport infrastructure we can have all the raw materials we want but we will not be able to get it to where it needs to go."
  MUU_modernize_industry:1 "Modernize our Industry"
- MUU_modernize_industry_desc:1 ""
+ MUU_modernize_industry_desc:1 "Modernization and efficiency are the watchwords of the day. Mu will be at the forefront of modernity!"
  MUU_expand_ports:1 "Expand the Ports"
- MUU_expand_ports_desc:1 ""
+ MUU_expand_ports_desc:1 "To better service our merchant and military fleets we must ensure that we have adequate port facilities."
  MUU_expand_dockyards:1 "The Q'tir Dockyards"
- MUU_expand_dockyards_desc:1 ""
+ MUU_expand_dockyards_desc:1 "Ships made in Mu, by Muror hands, to defend our nation and the world."
  MUU_economic_reforms:1 "Economic Reforms"
  MUU_economic_reforms_desc:1 ""
  MUU_rural_workforce:1 "Extend Conscription in the Countryside"
