--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -101,55 +101,55 @@
  MUU_expand_dockyards:1 "The Q'tir Dockyards"
  MUU_expand_dockyards_desc:1 "Ships made in Mu, by Muror hands, to defend our nation and the world."
  MUU_economic_reforms:1 "Economic Reforms"
- MUU_economic_reforms_desc:1 ""
+ MUU_economic_reforms_desc:1 "Improvements in economic regulation can help our industries grow and our people prosper."
  MUU_rural_workforce:1 "Extend Conscription in the Countryside"
- MUU_rural_workforce_desc:1 ""
+ MUU_rural_workforce_desc:1 "Our growing military requires recruits. The far flung corners of the nation should provide abundant numbers of bodies to place in uniform."
  MUU_soviet_aid:1 "Soviet Aid"
- MUU_soviet_aid_desc:1 ""
+ MUU_soviet_aid_desc:1 "Our Soviet brethren have offered their support and economic aid. We should accept their generous, and much needed, assistance."
  MUU_fellow_socialists:1 "Our Fellow Socialists"
- MUU_fellow_socialists_desc:1 ""
+ MUU_fellow_socialists_desc:1 "Despite their irrevocable status as Muli, we should still cultivate good relations with our fellow socialists. Only when all of the world's workers unite, Muror and Muli alike, will the glory of socialism abound!"
  MUU_support_revolutions:1 "Help the Class Struggle Abroad"
- MUU_support_revolutions_desc:1 ""
+ MUU_support_revolutions_desc:1 "The economic boom and glorious political changes that have taken place in Mu must be experienced elsewhere! Our politburo is preparing a number of strategies for foreign intervention in support of the socialist revolution abroad."
  MUU_puppet_republics:1 "Guide the Weaker States"
- MUU_puppet_republics_desc:1 ""
+ MUU_puppet_republics_desc:1 "Our weaker and less enlightened neighbors should be carefully and forcefully shepherded into the fold of international socialism."
  MUU_join_comintern:1 "Join the Comintern!"
- MUU_join_comintern_desc:1 ""
+ MUU_join_comintern_desc:1 "The Soviet Union is a major ally and friend to Mu. We shall make our alliance official and eternal!"
  MUU_expropriate_bourgeoisie:1 "Expropriate Bourgeoise Property"
- MUU_expropriate_bourgeoisie_desc:1 ""
+ MUU_expropriate_bourgeoisie_desc:1 "The Bourgeoise Elitists feast while the good Muror socialist workers toil in slavery. No longer! The Bourgeoise shall learn to respect the workers!"
  MUU_forced_collectivization:1 "Forced Collectivization"
- MUU_forced_collectivization_desc:1 ""
+ MUU_forced_collectivization_desc:1 "'Each man works for the good of all men. Each woman works for the good of all women. Perfect obedience to this perfect principle will bring perfect harmony.' - Qomisar Dutemunir, Muror Socialist Agitprop Icon"
  MUU_develop_poor:1 "Develop the Poor Districts"
- MUU_develop_poor_desc:1 ""
+ MUU_develop_poor_desc:1 "'If we are to expect equal work and equal dedication from all workers of the nation we must bring the glories of Socialism to each and every worker in the nation.' - Qomisar Dutemunir, Muror Socialist Agitprop Icon"
  MUU_land_reclamation:1 "Drain the Marshes"
- MUU_land_reclamation_desc:1 ""
+ MUU_land_reclamation_desc:1 "'Why waste good industrial and farmland? Help your comrades bring joy and prosperity to Mu - drain your local marshes!' - Qomisar Dutemunir, Muror Socialist Agitprop Icon"
  MUU_reform_religion:1 "Reform the Old Religion"
- MUU_reform_religion_desc:1 ""
+ MUU_reform_religion_desc:1 "Religion may have been considered the 'opium of the people' by Marx, but a sufficiently drugged person will not rebel against the government."
  MUU_persecute_religion:1 "No Room for Superstition"
- MUU_persecute_religion_desc:1 ""
+ MUU_persecute_religion_desc:1 "Comrade Karl was right. Religion has no place in a modern and vibrant socialist society! The last vestiges of the illegitimate and corrupt priestly class must be reeducated or eliminated."
  MUU_state_first:1 "State Above All"
- MUU_state_first_desc:1 ""
+ MUU_state_first_desc:1 "'Your friends, your family, and your country have need of you! Give your all, so that all might prosper!' - Muror Nationalist Propaganda poster"
  MUU_fascist_conscription:1 "Compulsory Military Service"
- MUU_fascist_conscription_desc:1 ""
+ MUU_fascist_conscription_desc:1 "'All men of appropriate age shall be required to fulfill compulsory military service for the period designated by the government.' - Muror National Military Service Law, 1941"
  MUU_expropriate_foreigners:1 "Expropriate Foreign Property"
- MUU_expropriate_foreigners_desc:1 ""
+ MUU_expropriate_foreigners_desc:1 "'Beginning the first day of this next month: no Muli person nor Muli company is permitted to own, in part or in whole, nor exercise any control over any properties or holdings within the nation.' - Muror National Appropriation Law, 1942"
  MUU_convert_factories1:1 "Militarize the Economy"
- MUU_convert_factories1_desc:1 ""
+ MUU_convert_factories1_desc:1 "To survive in this treacherous world we must prepare ourselves for the coming conflict. By enacting the correct economic policies we can begin to ready the people for the struggle."
  MUU_convert_factories2:1 "Convert Factories for the War"
- MUU_convert_factories2_desc:1 ""
+ MUU_convert_factories2_desc:1 "'An army requires weapons and ammunition. Frivolous things like garters and washing machines are not as important!' - Quthurulle Nubristum, Speaker of the National Assembly "
  MUU_claim_muror:1 "The Rebel States"
- MUU_claim_muror_desc:1 ""
+ MUU_claim_muror_desc:1 "For too long have we permitted the rebel states to pretend. They must be brough back into the Muror nation."
  MUU_conscript_muror:1 "Incorporate the Locals into the Army"
- MUU_conscript_muror_desc:1 ""
+ MUU_conscript_muror_desc:1 "Despite their decades, and sometimes centuries, of time apart from the main body of the Muror, the reacquired Muror states must also provide soldiers for the defense of the homeland."
  MUU_declare_empire:1 "A Unified People"
- MUU_declare_empire_desc:1 ""
+ MUU_declare_empire_desc:1 "The Muror were one people, are one people, and forever shall be one people!"
  MUU_claim_neighbours:1 "Strike the Invaders!"
- MUU_claim_neighbours_desc:1 ""
+ MUU_claim_neighbours_desc:1 "The time has come to drive the Muli from the shores of our beautiful, blessed land. They must be driven back into the sea so that they despoil our homeland no more!"
  MUU_existential_war:1 "An Existential War"
- MUU_existential_war_desc:1 ""
+ MUU_existential_war_desc:1 "Experience has proven that the Muli are only too content to destroy the Muror, the rightful owners of Mu. We are fighting for our lives!"
  MUU_claim_continent:1 "Cleanse the Homeland"
- MUU_claim_continent_desc:1 ""
+ MUU_claim_continent_desc:1 "No Muli shall be permitted to remain on Mu. Their existence alone demonstrates that they do not belong here!"
  MUU_unified_empire:1 "The Great Empire of Mu"
- MUU_unified_empire_desc:1 ""
+ MUU_unified_empire_desc:1 "The time is right for a declaration of the renewal of the Great Empire of Mu! Glory to Mu and the Muror!"
  
  MUU_connect_countryside:1 "Connect with the Countryside"
  MUU_connect_countryside_desc:1 ""
