renaming the mod to prepare for publishing

--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  01_MUU_tt:0 "§gUnlocks decisions to develop Dustartajare's Industrial Complex§ \n"
- 01_MUU_marsh:0 "§gUnlocks decisions to reclaim land in the Hadu Sea's marshes § \n"
+ 01_MUU_marsh:0 "§gUnlocks decisions to reclaim land in the Sea of Hadu's marshes § \n"
  
  marsh_infantry:0 "Detachable Floaters"
  marsh_motorized:0 "Watertight Seals"
