some stuff for fsm

--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -25,3 +25,5 @@
  FSM_pass_native_rights_bill_desc:1 "The constituiton of the FSM dictates that only landowners are allowed suffarage, confining the range of voters to the upper class. An amendment to relax these laws and allow more people to vote has a been up in the air in the government for a long time. Passing this would give common citizens more rights and would let newer ideas help develop the nation."
  FSM_supress_manu_nationalism:1 "Oust Opposition in Manu"
  FSM_supress_manu_nationalism_desc:1 "Many of the representatives in the Manu Autonomous State have proven uncooperative. We should use our powers to remove these figures from the government, and replace them with less radical representatives."
+ FSM_more_research:1 "Institutionalized Research"
+ FSM_more_research_desc:1 "With our economy now safer, we can begin to give funds to our scientific endeavors"
